--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEwHc16OvxJWfzHAoDId64",
+      "authorship_tag": "ABX9TyMd0oPwtT3D/bc7NKGVXf7/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,18 +67,20 @@
     {
       "cell_type": "code",
       "source": [
-        "model = models.Sequential([\n",
-        "    # Convolutional Base\n",
-        "    layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)),\n",
-        "    layers.MaxPooling2D((2, 2)),\n",
-        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
-        "    layers.MaxPooling2D((2, 2)),\n",
-        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import datasets, layers, models\n",
         "\n",
-        "    # Flatten and Dense Layers\n",
+        "# الآن سيعرف الكود ما هو 'models' و 'layers'\n",
+        "model = models.Sequential([\n",
+        "    layers.Input(shape=(32, 32, 3)),\n",
+        "    layers.Conv2D(32, (3, 3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
         "    layers.Flatten(),\n",
         "    layers.Dense(64, activation='relu'),\n",
-        "    layers.Dense(10)  # 10 output neurons for 10 classes\n",
+        "    layers.Dense(10)\n",
         "])\n",
         "\n",
         "model.summary()"
@@ -86,21 +88,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 463
+          "height": 408
         },
         "id": "r_jUYYpnNRKO",
-        "outputId": "f895e10f-3e00-4100-b78f-7fd933ee9a26"
+        "outputId": "e9e788f9-e766-4ecb-9dfb-0c0cd9035d03"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
